--- a/assets/css/_user-card.scss
+++ b/assets/css/_user-card.scss
@@ -10,6 +10,10 @@
     span {
       margin-right:8px;
     }
+    p a {
+      text-overflow: ellipsis;
+      overflow-x: hidden;
+    }
   }
   .user-stats {
     @extend .top-grey-border;
