--- a/assets/css/_user-card.scss
+++ b/assets/css/_user-card.scss
@@ -9,13 +9,18 @@
     margin-bottom:20px;
     span {
       margin-right:8px;
+      color:$grey;
     }
     p {
       font-size:14px;
+      margin-bottom:4px;
     }
     p a {
       text-overflow: ellipsis;
       overflow-x: hidden;
+    }
+    span.date {
+      color:black;
     }
   }
   .user-stats {
@@ -23,10 +28,10 @@
     padding-top:10px;
     margin-bottom:10px;
     a {
-      width:30%;
+      width:33.33%;
       display:inline-block;
       font-size:11px;
-      color:$dark-grey;
+      color:$grey;
       text-align:center;
       strong {
         font-size:28px;
