--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -1,7 +1,51 @@
+nav {
+  width:100%;
+  color:black;
+  background-color: #f5f5f5;
+  border-bottom: 1px solid #e5e5e5;
+  height:60px;
+  margin-bottom:20px;
+  padding-top:10px;
+  span {
+    vertical-align:middle;
+    margin-right:8px;
+    color:black;
+    &:hover{
+      color:$blue;
+    }
+  }
+  input {
+    width:300px;
+    margin-right:4px;
+    height:34px;
+    box-shadow:inset 0 1px 2px rgba(0,0,0,0.075);
+    font-size:13px;
+    border:1px solid #ccc;
+    border-radius:3px;
+    vertical-align:middle;
+    padding-left:7px;
+  }
+  ul li {
+    display:inline-block;
+  }
+  a {
+    color:black;
+    font-size:13px;
+    font-weight:bold;
+    &:visited {
+      color:black;
+    }
+    &:hover {
+      color:$blue;
+    }
+  }
+}
+
+
+
 .container {
   width:980px;
   margin: 0 auto;
-  margin-top:60px;
   margin-bottom:100px;
   overflow:auto;
 }
@@ -70,7 +114,7 @@
       color:white;
       background-image: linear-gradient(#8add6d, #60b044);
       background-repeat: repeat-x;
-      border: 1px solid #d5d5d5;
+      border: 1px solid #5ca941;
       border-radius: 3px;
       font-size: 13px;
       font-weight: bold;
@@ -78,6 +122,9 @@
       white-space: nowrap;
       padding:8px;
       margin-bottom:12px;
+      &:hover {
+        opacity:.8;
+      }
     }
 
     input {
