--- a/assets/css/compiled.css
+++ b/assets/css/compiled.css
@@ -40,10 +40,44 @@ a:visited {
 a:hover {
   color: #7ba9d6; }
 
+nav {
+  width: 100%;
+  color: black;
+  background-color: #f5f5f5;
+  border-bottom: 1px solid #e5e5e5;
+  height: 60px;
+  margin-bottom: 20px;
+  padding-top: 10px; }
+  nav span {
+    vertical-align: middle;
+    margin-right: 8px;
+    color: black; }
+    nav span:hover {
+      color: #4183c4; }
+  nav input {
+    width: 300px;
+    margin-right: 4px;
+    height: 34px;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
+    font-size: 13px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    vertical-align: middle;
+    padding-left: 7px; }
+  nav ul li {
+    display: inline-block; }
+  nav a {
+    color: black;
+    font-size: 13px;
+    font-weight: bold; }
+    nav a:visited {
+      color: black; }
+    nav a:hover {
+      color: #4183c4; }
+
 .container {
   width: 980px;
   margin: 0 auto;
-  margin-top: 60px;
   margin-bottom: 100px;
   overflow: auto; }
 
@@ -101,7 +135,7 @@ a:hover {
       color: white;
       background-image: linear-gradient(#8add6d, #60b044);
       background-repeat: repeat-x;
-      border: 1px solid #d5d5d5;
+      border: 1px solid #5ca941;
       border-radius: 3px;
       font-size: 13px;
       font-weight: bold;
@@ -109,6 +143,8 @@ a:hover {
       white-space: nowrap;
       padding: 8px;
       margin-bottom: 12px; }
+      .activity-col .search-bar .new-button:hover {
+        opacity: .8; }
     .activity-col .search-bar input {
       width: 200px;
       margin-right: 4px;
